--- a/styles/style.css
+++ b/styles/style.css
@@ -20,11 +20,16 @@
   font-size: 16px;
   font-weight: 400;
   color: #0D1321;
+  text-align: center;
 }
 .banner{
+  margin: 0px;
   background-image: url(../assets/Hero-bg.png);
-  background-size: cover;
+  /* background-size: cover; */
   padding: 26px 221px 45px 221px;
+  height: 652px;
+  width: 1440px;
+ 
  
 }
     
@@ -33,7 +38,7 @@
   text-align: center;
 
   background-image: url(../assets/Hero-bg.png);
-  background-size: cover;
+  /* background-size: cover; */
   height: 652px;
   width: 1440px;
 }
@@ -44,4 +49,110 @@
   background-color: #0D1321;
   padding: 24px 21px;
   border-radius: 8px;
+  margin-top: 32px;
+}
+/* main section */
+.main-div{
+  display: flex;
+
+}
+.pp1{
+  display: flex;
+}
+.part1{
+  display: block;
+}
+.why{
+  font-size: 32px;
+  font-weight: bolder;
+  text-align: center;
+  margin-top: 154px;
+  padding: 48px;
+}
+.learn{
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+  padding: 24px 47px 48px 47px;
+}
+
+
+.heading{
+  font-size: 32px;
+  font-weight: bolder;
+  color: #0D1321;
+  margin-top:90px ;
+}
+.inspiration{
+  font-size: 16px;
+  font-weight: 400;
+  justify-content: center;
+
+}
+.main{
+  text-align: center;
+  padding: 32px;
+
+}
+.foot{
+  background-image: url(../assets/handshake.jpg) no-repeat center center fixed;
+  background-size: cover;
+  border-radius: 10px;
+  weight: 1140px;
+}
+.ftb{
+  display: flex; 
+}
+.ft{
+  color:white ;
+  font-size: 32px;
+  font-weight: bold;
+}
+.ftt{
+  font-size: 16px;
+  font-weight: 400;
+}
+.current{
+  font-size: 32px;
+  font-weight: bolder;
+}
+.want{
+  font-size: 16px;
+  font-weight: 400;
+}
+.flex{
+  display: flex;
+}
+.design{
+  width:477px ;
+  padding: 10.5px;
+  margin: 0 ;
+  justify-content: center;
+}
+.ima{
+width: 274.17px;
+}
+.flex{
+  gap: 98px;
+  justify-content: center;
+}
+.secondary-bg{
+  justify-content: space-around;
+  display: flex;
+}
+.skill-container{
+  display: flex;
+  padding: 40px;
+  gap: 24px;
+  justify-content: center;
+}
+.skill{
+  padding: 40px;
+  box-shadow: 0px 4px 4px 0px #000000;
+}
+.video{
+  margin-top: 90px;
+}
+.main-title{
+  padding: 90px 144px 48px 144px;
 }
